# openMVS

./: .clang-format  .gitignore  AGENTS.md  BUILD.md  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: claude.yml  continuous_integration.yml  sync-wiki.yml
apps/: CMakeLists.txt
apps/CreateStructure/: CMakeLists.txt  CreateStructure.cpp
apps/DensifyPointCloud/: DensifyPointCloud.cpp
apps/ExtractKeyframes/: CMakeLists.txt  ExtractKeyframes.cpp
apps/InterfaceCOLMAP/: InterfaceCOLMAP.cpp
apps/InterfaceMVSNet/: InterfaceMVSNet.cpp
apps/InterfaceMetashape/: InterfaceMetashape.cpp
apps/InterfaceOpenMVG/: CMakeLists.txt  InterfaceOpenMVG.cpp
apps/InterfacePolycam/: InterfacePolycam.cpp
apps/OrthoMap/: CMakeLists.txt  OrthoMap.cpp
apps/ReconstructMesh/: ReconstructMesh.cpp
apps/RefineMesh/: RefineMesh.cpp
apps/Tests/: AGENTS.md  Tests.cpp  TestsMVS.cpp  TestsMVS.h  TestsSFM.cpp  TestsSFM.h
apps/Tests/data/: scene.mvs
apps/TextureMesh/: TextureMesh.cpp
apps/TransformScene/: TransformScene.cpp
apps/Viewer/: AGENTS.md  ArcballControls.cpp  ArcballControls.h  BoundingBoxEdit.cpp  BoundingBoxEdit.h  BufferObjects.cpp  BufferObjects.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.md  Common.h  EmptySceneIcon.h  FirstPersonControls.cpp  FirstPersonControls.h  Image.cpp  Image.h  MacOpenFiles.mm  OpenGLDebug.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SelectionController.cpp  SelectionController.h  SelectionController.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UI.cpp  UI.h  Viewer.cpp  Viewer.icns  Window.cpp  Window.h
apps/Viewer/shaders/: axes.frag  axes.vert  bounds.frag  camera.vert  geometryselection.frag  geometryselection.vert  gizmo.frag  gizmo.vert  imageoverlay.frag  imageoverlay.vert  mesh.frag  mesh.vert  meshtextured.frag  meshtextured.vert  picker_mesh.frag  picker_mesh.vert  picker_points.frag  picker_points.vert  pointcloud.frag  pointcloud.vert  pointcloudnormals.frag  pointcloudnormals.vert  selection.frag  selection.geom  selectionoverlay.frag  selectionoverlay.vert
apps/Viewer/templates/: Info.plist.in  Viewer-fileassoc.reg.in  openMVS-Viewer.desktop.in  openmvs-mime.xml.in
docs/: CUDA_TEXTURE_AND_ORTHOMAP.md
docs/design/: OrthoMap Grid and DEM Generation Design Document.md  OrthoMap Grid and DEM Generation Implementation Plan.md  Orthomap View Projection and Filtering Design Document.md  Orthomap View Projection and Filtering Implementation Plan.md  PoseLibBearingVector.md  SphericalCameraSupport.md
docs/wiki/: Building.md  Home.md  Interface.md  Modules.md  Usage.md
libs/: MVS.h
libs/Common/: AABB.inl  CMakeLists.txt  Common.cpp  Common.h  Config.h  List.h  Log.cpp  Log.h  Maths.h  OBB.h  OBB.inl  Octree.inl  Plane.inl  README.md  Rotation.h  Rotation.inl  Sampler.inl  Strings.h  Timer.h  Types.h  Types.inl  Util.cpp  Util.h  Util.inl  UtilCUDA.cpp  UtilCUDA.h  UtilCUDADevice.h
libs/IO/: CMakeLists.txt  Image.cpp  Image.h  ImageBMP.cpp  ImageBMP.h  ImageDDS.cpp  ImageDDS.h  ImageJPG.cpp  ImageJPG.h  ImageJXL.cpp  ImageJXL.h  ImagePNG.cpp  ImagePNG.h  ImageSCI.cpp  ImageSCI.h  ImageTGA.cpp  ImageTGA.h  ImageTIFF.cpp  ImageTIFF.h  PLY.cpp  PLY.h  README.md
libs/MVS/: AtlasPacker.cpp  AtlasPacker.h  CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  DepthMap.cpp  DepthMap.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  PatchMatchCUDA.cpp  PatchMatchCUDA.cu  PatchMatchCUDA.inl  PointCloud.cpp  PointCloud.h  PythonWrapper.cpp  README.md  Scene.cpp  Scene.h  SceneDensify.cpp  SceneDensify.h  SceneGeometry.cpp  SceneOrthoCUDA.inl  SceneOrthoMap.cpp  SceneOrthoMap.h  SceneReconstruct.cpp  SceneRefine.cpp  SceneRefineCUDA.cpp  SceneRefineCUDA.cu  SceneRefineCUDA.inl  SceneTexture.cpp  SceneTextureCUDA.inl  SemiGlobalMatcher.cpp  SemiGlobalMatcher.h
libs/MVS/CUDA/: DeviceBuffer.h  DeviceBufferBase.h  DeviceImage.h  DeviceMat.h  Maths.h
libs/MVS/CURAST/: curast.cpp  curast.cu  curast.h
libs/Math/: CMakeLists.txt  Common.h  ConfidenceInterval.h  DisjointSet.h  GeodeticTransforms.cpp  GeodeticTransforms.h  LBP.h  README.md  SimilarityTransform.cpp  SimilarityTransform.h
libs/SFM/: AGENTS.md  BundleAdjustment.cpp  Camera.cpp  Camera.h  FeaturesExtractor.cpp  FeaturesExtractor.h  GlobalAlignment.cpp  Image.cpp  Image.h  ImagePair.cpp  ImportROMA2.cpp  InterfaceMVS.cpp  InterfaceMVS.h  KeyframeExtractor.cpp  KeyframeExtractor.h  MatchGeometric.cpp  PairsMatcher.cpp  PairsWeighting.cpp  PythonWrapper.cpp  Resection.cpp  Scene.cpp  SphereCubeMap.cpp  SphereCubeMap.h  StarInitializer.cpp  Track.cpp  Track.h  Triangulation.cpp  Triangulation.h  View.h
ports/poselib/: portfile.cmake  vcpkg.json
ports/siftgpu/source/: CMakeLists.txt
scripts/python/: MvgMvsPipeline.py  MvsCamera2EXIF.py  MvsPointCloud2TSDF.py  MvsUtils.py  preview_wiki.py
vcpkg-overlay-ports/xatlas/: portfile.cmake  vcpkg.json
